@@ -19,45 +19,50 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Classe
+ */
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+    // Iniettiamo il filtro JWT
     @Autowired
     private JwtFilter jwtFilter;
 
+    // Bean per la codifica delle password (usato in fase di registrazione e login)
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // Configuriamo la sicurezza HTTP
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .csrf(AbstractHttpConfigurer::disable)
                 .cors(Customizer.withDefaults()) // Richiama il bean CORS qui sotto
-                // Fondamentale: non usiamo i cookie di sessione, usiamo solo il token
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/login", "/api/auth/register").permitAll() // Solo queste API sono pubbliche
                         .anyRequest().authenticated() // TUTTE le altre API richiedono il Token!
                 )
-                // Aggiungiamo il nostro filtro prima di quelli standard di Spring
+                // Aggiungiamo il nostro filtro JWT prima del filtro di autenticazione standard di Spring Security
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    // Gestione GLOBALE del CORS (così puoi rimuovere @CrossOrigin dai Controller)
+    // Configuriamo CORS per permettere al frontend Angular (che gira su localhost:4200) di comunicare con il backend
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost")); // Permettiamo solo al frontend di accedere alle API
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS")); // Permettiamo tutti i metodi HTTP comuni
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type")); // Permettiamo l'header "Authorization" per inviare il token JWT e "Content-Type" per le richieste JSON
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", configuration); // Applichiamo questa configurazione a tutte le rotte
         return source;
     }
 }
